--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "karma-safari-launcher": "~0.1.1"
   },
   "scripts": {
-    "test": "karma start --single-run --browsers PhantomJS",
-    "watch-test": "karma start"
+    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS",
+    "watch-test": "./node_modules/.bin/karma start"
   }
 }
