--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "karma-cli": "~0.0.4",
     "karma-jasmine": "~0.2.1",
     "karma-requirejs": "~0.2.1",
-    "karma-phantomjs-launcher": "~0.1.2"
+    "karma-phantomjs-launcher": "~0.1.2",
     "karma-chrome-launcher": "~0.1.0",
     "karma-ie-launcher": "~0.1.1",
     "karma-firefox-launcher": "~0.1.0",
