--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "karma-jasmine": "~0.2.1",
     "karma-requirejs": "~0.2.1",
     "karma-phantomjs-launcher": "~0.1.2",
-    "karma-chrome-launcher": "~0.1.0",
-    "karma-ie-launcher": "~0.1.1",
-    "karma-firefox-launcher": "~0.1.0",
-    "karma-safari-launcher": "~0.1.1"
+    "karma-chrome-launcher": "~0.1.0"
   },
   "scripts": {
     "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS",
